[feature][cli] Pulsar shell - add support for input files and pipe for running multiple commands - part 2